 * Crashbug in @message. Reported by Yuriko. [MG]
 * linsert(,1,foo) now returns "foo", like it always used to, instead of
   returning an empty list. [MG]
 * SSL connections which had not yet logged into a player weren't always
   fully cleaned up. Patch by Fraibert.
 * channels() could include an extra delimiter in some cases. Reported by 
   Mouvar. [MG]

Minor changes:
 * strreplace() now works harder to keep existing ANSI intact, when you
   replace an un-ansi'd string into an ansi'd one. [MG]
 * colors(...,xterm256) can now return colors 0 to 15, to avoid confusion
   when converting xterm -> hex -> xterm. Reported by Trinsec. [MG]
 * New substitution, %k, returns the enactor's monikered name. [MUX] [MG]
 * Help fixes and tweaks. [MG]
 * PennMUSH can now read MUX-style passwords, to make moving dbs from MUX
   to Penn less painful. Requested by Muse. [MG]
 * Commands are no longer queued for HALTed non-players. (Since they'd be
   dropped from the queue anyway, rather than being run, it saves us jumping
   through a series of hoops for no good reason.) From a report by Muse and
   Ashen-Shugar. [MG]
 * The connect-screen WHO now shows moniker'd (ansi'd) names, if so 
   configured. Requested by Trinsec. [MG]
 * @mapsql and mapsql()'s attributes now receives named arguments. That is,
   '@mapsql me/foo=SELECT bar FROM table' receives the value of the 'bar'
   field as both %1 and [r(bar,args)]. [MG]
 * Wizards can now give players names with spaces, even when the 
   player_name_spaces option is off. Suggested by Paige. [MG]
 * Removed the last traces of the 'events' help-style command. Noone ever
   uses it, and we removed the helpfiles for it ages ago when the Event 
   System was added, anyway. [MG]
 * Updated the README for adding help-style commands, with clearer examples.
   Requested by AnnePearn. [MG]
 * Per-player mail limits can be set with @mailquota, to override the
   mail_limit @config option selectively. Suggested by Ricochet. [MG]